<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ManageIngredientsDataActivity">

    <android.support.design.widget.TextInputLayout
            android:layout_width="281dp"
            android:layout_height="57dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="50dp" app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/textInputLayout2">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/foodName" android:id="@+id/ingredient_name_input" android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="281dp"
            android:layout_height="57dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.504"
            android:id="@+id/textInputLayout4" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/ingredient_number_input">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingredientDescription" android:id="@+id/ingredient_desc_input"
                android:singleLine="false"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="281dp"
            android:layout_height="57dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.494" android:id="@+id/textInputLayout6">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingredientType" android:id="@+id/ingredient_type" android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>
    <EditText
            android:layout_width="281dp"
            android:layout_height="57dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/ingredient_number_input"
            android:hint="@string/quantity"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.508"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" app:layout_constraintEnd_toEndOf="parent"/>
    <CheckBox
            android:text="@string/optional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/optional_check"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout6" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"/>
    <Button
            android:text="@string/updateButton"
            android:layout_width="125dp"
            android:layout_height="78dp"
            android:id="@+id/btn_update_ingredient"
            android:layout_marginTop="56dp" app:layout_constraintTop_toBottomOf="@+id/cool_check"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"/>
    <Button
            android:text="@string/deleteButton"
            android:layout_width="125dp"
            android:layout_height="78dp"
            android:id="@+id/btn_delete_ingredient" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="56dp" app:layout_constraintTop_toBottomOf="@+id/cool_check"/>
    <CheckBox
            android:text="@string/ingredientCool"
            android:layout_width="178dp"
            android:layout_height="35dp"
            android:id="@+id/cool_check" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout6" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"/>

</android.support.constraint.ConstraintLayout>