<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddFoodActivity">

    <android.support.design.widget.TextInputLayout
            android:layout_width="281dp"
            android:layout_height="57dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="50dp" app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/textInputLayout2">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/foodName" android:id="@+id/new_food_name_input" android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="281dp"
            android:layout_height="57dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.504"
            android:id="@+id/textInputLayout4">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/foodDescription" android:id="@+id/new_food_desc_input" android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="281dp"
            android:layout_height="57dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.494" android:id="@+id/textInputLayout6">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/foodCountry" android:id="@+id/new_food_country_input" android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>
    <EditText
            android:layout_width="184dp"
            android:layout_height="44dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/new_food_number_input"
            android:hint="@string/numberPeople"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout6"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/new_optional_check"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
    <CheckBox
            android:text="@string/hotSpicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/new_optional_check"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout6" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="50dp"/>
    <Button
            android:text="@string/newFoodButton"
            android:layout_width="125dp"
            android:layout_height="78dp"
            android:id="@+id/btn_new_food" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="52dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.402"
            app:layout_constraintTop_toBottomOf="@+id/new_food_number_input" android:layout_marginTop="60dp"
            android:layout_marginBottom="200dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"/>


</android.support.constraint.ConstraintLayout>