<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FoodActivity" android:id="@+id/food_layout" android:background="@drawable/food">

    <Button
            android:text="@string/manageFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_manage_food" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/createFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_create_food"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_manage_food"/>
    <Button
            android:text="@string/toMaps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_maps" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_create_food"
            app:layout_constraintStart_toStartOf="@+id/btn_create_food"
            app:layout_constraintEnd_toEndOf="@+id/btn_create_food"/>
</androidx.constraintlayout.widget.ConstraintLayout>